検索パラメータを title と author に分けた
